--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Yadav AI</title>
+    <title>Yadav Tech</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="" name="keywords">
     <meta content="" name="description">
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" integrity="sha512-...." crossorigin="anonymous" />
 
     <!-- Favicon -->
-    <link href="img/favicon.ico" rel="icon">
+    <link href="img/favicon2.png" rel="icon">
 
     <!-- Google Web Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -55,7 +55,7 @@
             <div class="row gx-0">
                 <div class="col-lg-3 bg-dark d-none d-lg-block">
                     <a href="index.html" class="navbar-brand w-100 h-100 m-0 p-0 d-flex align-items-center justify-content-center">
-                        <h1 class="m-0 text-primary text-uppercase">Yadav AI</h1>
+                        <h1 class="m-0 text-primary text-uppercase" style="font-size: 30px;">Yadav Tech</h1>
                     </a>
                 </div>
                 <div class="col-lg-9">
@@ -82,7 +82,7 @@
                     </div> -->
                     <nav class="navbar navbar-expand-lg bg-dark navbar-dark p-3 p-lg-0">
                         <a href="index.html" class="navbar-brand d-block d-lg-none">
-                            <h1 class="m-0 text-primary text-uppercase">Yadav AI</h1>
+                            <h1 class="m-0 text-primary text-uppercase">Yadav Technology</h1>
                         </a>
                         <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
                             <span class="navbar-toggler-icon"></span>
@@ -95,7 +95,7 @@
                                 <a href="#services" class="nav-item nav-link">Services</a>
                                 <a href="#features" class="nav-item nav-link">Features</a>                                                             
                                 <a href="#testimonials" class="nav-item nav-link">Testimonial</a>
-                                <a href="contact.html" class="nav-item nav-link">Contact</a>
+                                <a href="#contact" class="nav-item nav-link">Contact</a>
                             </div>
                             <!-- <a href="https://htmlcodex.com/hotel-html-template-pro" class="btn btn-primary rounded-0 py-4 px-md-5 d-none d-lg-block">Premium Version<i class="fa fa-arrow-right ms-3"></i></a> -->
                         </div>
@@ -114,7 +114,7 @@
                         <img class="w-100 img-fluid" src="img/BG-1.jpg" alt="Image">
                         <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
                             <div class="p-3" style="max-width: 800px;">
-                                <h6 class="section-title text-white text-uppercase mb-3 animated slideInDown">Yadav AI</h6>
+                                <h6 class="section-title text-white text-uppercase mb-3 animated slideInDown">Yadav Technology</h6>
                                 <h1 class="display-3 text-white mb-4 animated slideInDown">From pixels to profits, we build your digital dreams</h1>
                                 <a href="#our-services" class="btn btn-primary py-md-3 px-md-5 me-3 animated slideInLeft">Our Services</a>
                                 <a href="" class="btn btn-light py-md-3 px-md-5 animated slideInRight">Get in Touch</a>
@@ -125,7 +125,7 @@
                         <img class="w-100 img-fluid" src="img/BG-3.jpg" alt="Image">
                         <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
                             <div class="p-3" style="max-width: 800px;">
-                                <h6 class="section-title text-white text-uppercase mb-3 animated slideInDown">Yadav AI</h6>
+                                <h6 class="section-title text-white text-uppercase mb-3 animated slideInDown">Yadav Technology</h6>
                                 <h1 class="display-3 text-white mb-4 animated slideInDown">Vision to reality. Your roadmap to digital success</h1>
                                 <a href="#our-services" class="btn btn-primary py-md-3 px-md-5 me-3 animated slideInLeft">Our Services</a>
                                 <a href="" class="btn btn-light py-md-3 px-md-5 animated slideInRight">Get in Touch</a>
@@ -136,7 +136,7 @@
                         <img class="w-100 img-fluid" src="img/BG-2.jpg" alt="Image">
                         <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
                             <div class="p-3" style="max-width: 800px;">
-                                <h6 class="section-title text-white text-uppercase mb-3 animated slideInDown">Yadav AI</h6>
+                                <h6 class="section-title text-white text-uppercase mb-3 animated slideInDown">Yadav Technology</h6>
                                 <h1 class="display-3 text-white mb-4 animated slideInDown">Beyond clicks, beyond likes. We build brands that thrive online</h1>
                                 <a href="#our-services" class="btn btn-primary py-md-3 px-md-5 me-3 animated slideInLeft">Our Services</a>
                                 <a href="" class="btn btn-light py-md-3 px-md-5 animated slideInRight">Get in Touch</a>
@@ -213,8 +213,8 @@
                 <div class="row g-5 align-items-center">
                     <div class="col-lg-6">
                         <h6 class="section-title text-start text-primary text-uppercase">About Us</h6>
-                        <h1 class="mb-4">Welcome to <span class="text-primary text-uppercase">Yadav AI</span></h1>
-                        <p class="mb-4">At Yadav AI, we're pioneers in AI-infused marketing, leveraging machine learning precision to redefine campaigns. Beyond digital marketing, we offer web and app development, business consultation, SMM, and top-tier photo/video production. Elevate your brand with us: Where Yadav AI drives innovation and results.</p>
+                        <h1 class="mb-4">Welcome to <span class="text-primary text-uppercase">Yadav Technology</span></h1>
+                        <p class="mb-4">At Yadav Tech, we're pioneers in AI-infused marketing, leveraging machine learning precision to redefine campaigns. Beyond digital marketing, we offer web and app development, business consultation, SMM, and top-tier photo/video production. Elevate your brand with us: Where Yadav Tech drives innovation and results.</p>
                         
                         <a class="btn btn-primary py-3 px-5 mt-2" href="">Explore More</a>
                     </div>
@@ -903,20 +903,20 @@
         
 
         <!-- Footer Start -->
-        <div class="container-fluid bg-dark text-light footer wow fadeIn" data-wow-delay="0.1s">
+        <div class="container-fluid bg-dark text-light footer wow fadeIn" data-wow-delay="0.1s" id="contact">
             <div class="container pb-5">
                 <div class="row g-5">
                     <div class="col-md-6 col-lg-4">
                         <div class="bg-primary rounded p-4">
-                            <a href="index.html"><h1 class="text-white text-uppercase mb-3">Yadav AI</h1></a>
+                            <a href="index.html"><h1 class="text-white text-uppercase mb-3">Yadav Technology</h1></a>
                             <p class="text-white mb-0">
-                                Explore <a class="text-dark fw-medium" href="#">Yadav AI</a> and enhance your digital experience with cutting-edge technologies. Elevate your business to new heights with our innovative solutions.
+                                Explore <a class="text-dark fw-medium" href="#">Yadav Tech</a> and enhance your digital experience with cutting-edge technologies. Elevate your business to new heights with our innovative solutions.
                             </p>                            
                         </div>
                     </div>
                     <div class="col-md-6 col-lg-3">
                         <h6 class="section-title text-start text-primary text-uppercase mb-4">Contact</h6>
-                        <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>577/A vallalar street, Nehru nagar, Vengikkal</p>
+                        <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>577/A vallalar street, Nehru nagar, Vengikkal, Tiruvannamalai, Tamil Nadu 606601</p>
                         <p class="mb-2"><i class="fa fa-phone-alt me-3"></i><a href="tel:+918778593946" style="color: white; text-decoration: none;" onmouseover="this.style.color='#FEA116'" onmouseout="this.style.color='white'">+91 8778593946</a></p>
                         <p class="mb-2"><i class="fa fa-envelope me-3"></i><a href="mailto:info@yadavtechnology.com" style="color: white; text-decoration: none;" onmouseover="this.style.color='#FEA116'" onmouseout="this.style.color='white'">info@yadavtechnology.com</a></p>
                         <div class="d-flex pt-2">
@@ -968,7 +968,7 @@
                         </div>
                         <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
                             &copy; <a class="border-bottom" href="#">yadav-tech</a>, All Right Reserved. 
-                            Designed By <a class="border-bottom text-decoration-none" href="https://infywebstudios.com">Infy Web Studios</a>
+                            Powered by <a class="border-bottom text-decoration-none" href="https://infywebstudios.com">Infy Web Studios</a>
                         </div> 
                     </div>
                 </div>
